--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+ body { 
+     height: 100%;
+     background:url(https://fotografias.lasexta.com/clipping/cmsimages01/2020/05/08/E3BC9A26-F5D7-4B1D-9497-72A52CE9CB79/default.jpg?crop=1300,731,x0,y19&width=1900&height=1069&optimize=low);
+}
+
+body {
+     margin: 0; 
+     font-family: Roboto, "Helvetica Neue", sans-serif;
+     text-align: center;
+}
+
+.text-center {
+    text-align: center;
+}
